# Yupify-Reworked

./: .gitignore  LICENSE  README.MD  electron-builder.json  electron-main.js  electron-preload.js  get-refresh-token.js  my-release-key.jks  package-lock.json  package.json  vercel.json
.github/workflows/: android-build.yml  android-native-build.yml
backend/: .env  .eslintrc.json  package-lock.json  package.json  server.js
frontend/: .env.example  .env.production  capacitor.config.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/yupify/app/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/public/: manifest.json  sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/android-ffi/: Cargo.toml
frontend/src-tauri/android-ffi/src/: lib.rs
frontend/src-tauri/src/: main.rs  media_keys.rs
frontend/src/components/: AuthModal.jsx  Navigation.jsx  Player.jsx  SearchBar.jsx  TrackCard.jsx  TrackList.jsx  VideoModal.jsx
frontend/src/hooks/: useAudio.js  useAuth.js  useMediaSession.js
frontend/src/services/: api.js
frontend/src/utils/: autoplay.js  discordRpc.js  helpers.js
scripts/: build-android-ffi.sh
workers/: wrangler.toml
workers/src/: index.ts
