[package]
name = "yupify"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [] }
discord-rich-presence = "0.2"
once_cell = "1.19"
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
